tests/testdata/package_json/invalid_value/error.ts.out
error: Parsing version constraints in the application-level package.json is more strict at the moment.

Invalid npm version requirement. Unexpected character.
  invalid stuff that won't parse
  ~
    at file:///[WILDCARD]/error.ts:2:23
